tests/rename/should_fail/T22581a.hs
{-# LANGUAGE ExplicitNamespaces #-}

module T22581a where

import T22581a_helper (T(type MkT))

t :: T
t = MkT
